# large_gcs

./: .gitignore  .pre-commit-config.yaml  README.md  mosek_log.txt  pyproject.toml
config/: basic.yaml  cg_gcs_astar.yaml  cg_gcs_astar_conv_res.yaml  cg_gcs_astar_conv_res_baselines.yaml  cg_gcs_astar_reachability.yaml  cg_gcs_hastar.yaml  cg_gcs_hastar_reachability.yaml  cg_gcs_naive_astar.yaml  cg_gcs_naive_astar_baselines.yaml  cg_l1_norm_sampling.yaml  cg_l1_norm_sampling_early_terminate.yaml  cg_l1_norm_sampling_invert_S.yaml  cg_l1_norm_sampling_max_len_S.yaml  cg_l1_norm_sampling_num_samples_comparison.yaml  cg_l1_norm_sampling_vs_containment.yaml  factored_cfree_heur_split_vs_joined.yaml  gcs_astar_vs_conv_res_inc.yaml  gcs_conv_res_incompleteness.yaml  gcs_naive_astar_incompleteness.yaml  last_pos_containment_comparison.yaml  last_pos_sampling_comparison.yaml  memory_reduction.yaml  pairwise_vs_union_domination_comparison.yaml  quickstart.yaml  simul_vs_single_mode_switch.yaml  use_combined_gcs_comparison.yaml
example_graphs/: cg_maze_a1.npy  cg_maze_a10_inc.npy  cg_maze_a11_inc.npy  cg_maze_a12_inc.npy  cg_maze_a13_inc.npy  cg_maze_a14_inc.npy  cg_maze_a15_inc.npy  cg_maze_a16_inc.npy  cg_maze_a17_inc.npy  cg_maze_a18_inc.npy  cg_maze_a19_inc.npy  cg_maze_a1_inc.npy  cg_maze_a2.npy  cg_maze_a20_inc.npy  cg_maze_a21_inc.npy  cg_maze_a22_inc.npy  cg_maze_a23_inc.npy  cg_maze_a24_inc.npy  cg_maze_a25_inc.npy  cg_maze_a26_inc.npy  cg_maze_a27_inc.npy  cg_maze_a28_inc.npy  cg_maze_a29_inc.npy  cg_maze_a2_inc.npy  cg_maze_a30_inc.npy  cg_maze_a31_inc.npy  cg_maze_a32_inc.npy  cg_maze_a33_inc.npy  cg_maze_a34_inc.npy  cg_maze_a35_inc.npy  cg_maze_a36_inc.npy  cg_maze_a37_inc.npy  cg_maze_a38_inc.npy  cg_maze_a39_inc.npy  cg_maze_a3_inc.npy  cg_maze_b0_1_inc.npy  cg_maze_b0_inc.npy  cg_maze_b1.npy  cg_maze_b1_1_inc.npy  cg_maze_b1_inc.npy  (+71 more)
experiments/: run_contact_graph_experiment.py  run_ggcs_se3_maze_experiment.py
explorations/: 1d_polycontain_exploration.ipynb  cg_astar_tiebreak_exploration.ipynb  cg_astar_viz_intermediate_exploration.ipynb  cg_factored_collision_free_exploration.ipynb  cg_neighbor_generator_exploration.ipynb  cg_neighbor_generator_exploration_2.ipynb  contact_astar_exploration.ipynb  contact_graph_chatgpt_exploration.ipynb  contact_graph_exploration.ipynb  contact_graph_exploration.py  contact_pair_mode_constraints_exploration.ipynb  contact_pair_mode_generation_exploration.ipynb  contact_position_constraints_exploration.ipynb  contact_regions_set_exploration.ipynb  conv_res_costs_bug_minimal.py  domination_checks_last_pos.ipynb  edge_constraint_bug.ipynb  edge_constraint_bug_minimal.py  gcs_reachability_exploration.ipynb  gcs_vertex_cost_exploration.ipynb  gcshastar_trichal4_lvl1_revisits_output.txt  gcshastar_trichal4_norevisits_output.txt  ggcs_test.ipynb  graph_params_WAFR.ipynb  hastar_exploration.ipynb  hor_vert_gcs_bug.py  (+22 more)
(+268 files in other folders)
