[tool.poetry]
name = "large-gcs"
version = "0.1.0"
description = ""
authors = ["Shao Yuan <flossy_lineage.0b@icloud.com>"]
readme = "README.md"
packages = [{include = "large_gcs"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
ipykernel = "^6.23.1"
scipy = "^1.10.1"
graphviz = "^0.20.1"
# Use nightly build of Drake
drake = [
    #{url="https://drake-packages.csail.mit.edu/drake/nightly/drake-latest-cp311-cp311-macosx_12_0_x86_64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"},
    {url="https://drake-packages.csail.mit.edu/drake/nightly/drake-latest-cp311-cp311-macosx_12_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
    # For Ubuntu 20.04 Focal
    # {url="https://drake-packages.csail.mit.edu/drake/nightly/drake-latest-cp38-cp38-manylinux_2_31_x86_64.whl", markers="sys_platform == 'linux'"},
]
black = "^23.3.0"
tqdm = "^4.65.0"
pytest = "^7.4.0"
wandb = "^0.15.5"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
autoflake = "^2.2.0"
isort = "^5.12.0"
pdbpp = "^0.10.3"
plotly = "^5.20.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
