[tool.poetry]
name = "large-gcs"
version = "0.1.0"
description = ""
authors = ["Shao Yuan <flossy_lineage.0b@icloud.com>"]
readme = "README.md"
packages = [{include = "large_gcs"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
ipykernel = "^6.23.1"
scipy = "^1.10.1"
graphviz = "^0.20.1"
drake = [{version = "^0.0.20240505", source = "drake-repo"}]
black = "^23.3.0"
tqdm = "^4.65.0"
pytest = "^7.4.0"
wandb = "^0.15.5"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
autoflake = "^2.2.0"
isort = "^5.12.0"
pdbpp = "^0.10.3"
plotly = "^5.20.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "drake-repo"
url = "https://drake-packages.csail.mit.edu/whl/nightly/"
